syntax = "proto3";

package go.mnhosted.srv.wallet;

service Wallet {
	rpc New(NewRequest) returns (NewResponse) {}
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse) {}
  rpc Pay(payRequest) returns (payResponse) {}
}

message NewRequest {
	string account = 1;
}

message NewResponse {
	string address = 1;		//
}

message GetBalanceRequest {
  string account = 1;
}

message GetBalanceResponse {
  double balance = 1;
}

message payRequest {
  string account = 1;
  double balance = 2;
}

message payResponse {
  int32 rescode = 1;
  string txID = 2;
}